# DataAISummit2024

./: .gitignore  Makefile  README.md  brickflow-multi-project.yml  prospector.yaml  pyproject.toml
dataaisummit/: .brickflow-project-root.yml  bundle.yml
dataaisummit/demo_product/: spark_expectations_demo.ipynb
dataaisummit/workflows/: coffeeco_wf.py  demo_summit.py  demo_summit_1.py  entrypoint.py
